格式调整及内容勘误

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -1,3 +1,7 @@
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
+
+
+
 # 导读
 
 数据结构与算法是计算机从业人员的内力，只有掌握牢固这部分内容，才能使用合适的数据结构与算法来设计出性能高效的程序。
@@ -94,9 +98,9 @@
 
 ### 2.2 排序算法
 
-* [选择排序](./算法/排序算法/01 选择排序.md)
-* [冒泡排序](./算法/排序算法/02 冒泡排序.md)
-* [插入排序](./算法/排序算法/03 插入排序.md)
+* [选择排序](./算法/排序算法/01_选择排序.md)
+* [冒泡排序](./算法/排序算法/02_冒泡排序.md)
+* [插入排序](./算法/排序算法/03_插入排序.md)
 * 希尔排序
 * 归并排序
 * 快速排序
