--- a/docs/数据结构与算法/算法/算法概述/写算法的哲学.md
+++ b/docs/数据结构与算法/算法/算法概述/写算法的哲学.md
@@ -1,3 +1,5 @@
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
+
 # 导读
 
 在刚接触算法程序设计时，大部分同学会都没有章法。为此，我们在写算法的时候，需要遵循一定的哲学来指导我们进行算法设计。本文主要从以下几点介绍：
@@ -8,13 +10,22 @@
 
 在编写算法程序时，遵从上述哲学能够更高效地进行编码设计。
 
-**持续更新中~**
+***持续更新中~***
 
 
 
 # 目录
 
-[TOC]
+<nav>
+<a href='#导读' style='text-decoration:none;font-weight:bolder'>导读</a><br/>
+<a href='#目录' style='text-decoration:none;font-weight:bolder'>目录</a><br/>
+<a href='#正文' style='text-decoration:none;font-weight:bolder'>正文</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#1 由简单到复杂' style='text-decoration:none;${border-style}'>1 由简单到复杂</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#2 先局部后整体' style='text-decoration:none;${border-style}'>2 先局部后整体</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#3 先粗糙后精细' style='text-decoration:none;${border-style}'>3 先粗糙后精细</a><br/>
+<a href='#总结' style='text-decoration:none;font-weight:bolder'>总结</a><br/>
+<a href='#参考文献' style='text-decoration:none;font-weight:bolder'>参考文献</a><br/>
+</nav>
 
 # 正文
 
