--- a/docs/数据结构与算法/数据结构/布隆过滤器.md
+++ b/docs/数据结构与算法/数据结构/布隆过滤器.md
@@ -1,10 +1,12 @@
-![name_code](https://gitee.com/struggle3014/picBed/raw/master/name_code.png)
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
 
 # 导读
 
 本文梳理布隆过滤器的相关知识。
 
 ***持续更新中~***
+
+
 
 # 目录
 
