--- a/docs/数据结构与算法/算法/排序算法/01_选择排序.md
+++ b/docs/数据结构与算法/算法/排序算法/01_选择排序.md
@@ -1,8 +1,10 @@
-![name_code](https://gitee.com/struggle3014/picBed/raw/master/name_code.png)
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
 
 # 导读
 
 选择排序（Selection Sort）是一种简单直观的排序算法。
+
+***持续更新中~***
 
 
 
