--- a/docs/数据结构与算法/算法/搜索算法/二分法.md
+++ b/docs/数据结构与算法/算法/搜索算法/二分法.md
@@ -1,8 +1,10 @@
-![name_code](https://gitee.com/struggle3014/picBed/raw/master/name_code.png)
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
 
 # 导读
 
 本文介绍二分搜索算法。
+
+***持续更新中~***
 
 
 
