--- a/docs/数据结构与算法/算法/算法概述/算法效率与度量.md
+++ b/docs/数据结构与算法/算法/算法概述/算法效率与度量.md
@@ -1,10 +1,36 @@
+<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
+
 # 导读
+
+本文介绍算法效率与度量。
+
+***持续更新中~***
 
 
 
 # 目录
 
-
+<nav>
+<a href='#导读' style='text-decoration:none;font-weight:bolder'>导读</a><br/>
+<a href='#目录' style='text-decoration:none;font-weight:bolder'>目录</a><br/>
+<a href='#正文' style='text-decoration:none;font-weight:bolder'>正文</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#评估算法优劣的核心指标时什么？' style='text-decoration:none;${border-style}'>评估算法优劣的核心指标时什么？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#时间复杂度是什么，如何估算？' style='text-decoration:none;${border-style}'>时间复杂度是什么，如何估算？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#常数时间操作是什么？' style='text-decoration:none;${border-style}'>常数时间操作是什么？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#常见的常数时间操作' style='text-decoration:none;${border-style}'>常见的常数时间操作</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#如何确定算法流程的总操作数量与样本数量之间的表达式关系？' style='text-decoration:none;${border-style}'>如何确定算法流程的总操作数量与样本数量之间的表达式关系？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#如何确定算法流程的时间复杂度？' style='text-decoration:none;${border-style}'>如何确定算法流程的时间复杂度？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#算法流程时间复杂度估算注意点？' style='text-decoration:none;${border-style}'>算法流程时间复杂度估算注意点？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#时间复杂度的意义' style='text-decoration:none;${border-style}'>时间复杂度的意义</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#额外空间复杂度' style='text-decoration:none;${border-style}'>额外空间复杂度</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#算法流程的常数项' style='text-decoration:none;${border-style}'>算法流程的常数项</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#算法流程的常数项的比拼方式' style='text-decoration:none;${border-style}'>算法流程的常数项的比拼方式</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#面试，比赛，刷题中，一个问题的最优解是什么意思？' style='text-decoration:none;${border-style}'>面试，比赛，刷题中，一个问题的最优解是什么意思？</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#常见的时间复杂度' style='text-decoration:none;${border-style}'>常见的时间复杂度</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#算法和数据结构学习的大脉络' style='text-decoration:none;${border-style}'>算法和数据结构学习的大脉络</a><br/>
+<a href='#总结' style='text-decoration:none;font-weight:bolder'>总结</a><br/>
+<a href='#参考文献' style='text-decoration:none;font-weight:bolder'>参考文献</a><br/>
+</nav>
 
 # 正文
 
@@ -144,23 +170,6 @@ O(N!)
 1）知道怎么算的算法
 
 2）知道怎么试的算法
-
-
-
-##  认识对数器
-
-烦恼：
-
-* 你在网上找到某个公司的面试题，你想了很久，感觉自己会做，但是你找不到在线测试，你好心烦...
-* 你和朋友交流面试题，你想了很久，感觉自己会做，但是你找不到在线测试，你好心烦...
-* 你再网上做笔试，但是前几个测试用例都过了，突然一个巨大无比的数据量来了，但是你的代码报错了，如此大的数据量根本看不出哪错了，你好心烦...
-
-1. 你想要测试的方法 A
-2. 实现复杂度不好，但容易实现的方法 B
-3. 实现一个随机样本生成器
-4. 把方法 A 和方法 B 跑相同的随机样本，看看得到的结果是否一样
-5. 如果有一个随机样本使得比对结果不一致，打印样本进行人工干预，该对方法 A 和方法 B
-6. 当样本数量很多时比对依然正确，那么可以确定方法 A 已经正确
 
 
 
