笔记样式调整

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -1,4 +1,4 @@
-<img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png" div align=center />
+<div align="center"><img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png"></div>
 
 
 
