--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -1,7 +1,5 @@
 <div align="center"><img src="https://gitee.com/struggle3014/picBed/raw/master/name_code.png"></div>
 
-
-
 # 导读
 
 数据结构与算法是计算机从业人员的内力，只有掌握牢固这部分内容，才能使用合适的数据结构与算法来设计出性能高效的程序。
@@ -48,16 +46,14 @@
 ### 1.2 线性结构
 
 * 线性表
-  * 顺序表
-  * 链表
+  * [有序表（顺序表）](./数据结构/线性结构/有序表.md)
+  * [链表](./数据结构/线性结构/链表.md)
 
-* 栈
+* [栈](./数据结构/线性结构/栈.md)
 
-* 队列
+* [队列](./数据结构/线性结构/队列.md)
 
-### 1.3 散列表（哈希表）
-
-
+### 1.3 [散列表（哈希表）](./数据结构/散列表（哈希表）.md)
 
 ### 1.4 树
 
@@ -80,6 +76,12 @@
 ### 1.5 图
 
 
+
+### 1.6 延伸
+
+* [布隆过滤器（BloomFilter）](./数据结构/延伸/布隆过滤器.md)
+* [跳跃表（SkipList）](./数据结构/延伸/跳表（SkipList）.md)
+* [数据结构的思考](./数据结构/延伸/数据结构的思考.md)
 
 
 
@@ -117,7 +119,7 @@
 
 ### 2.6 递归与分治策略
 
-
+* [递归](./算法/递归与分治策略/递归.md)
 
 ### 2.7 动态规划
 
@@ -153,9 +155,9 @@
 
 # 参考文献
 
-[1] 《算法导论》，第三版，Thomas H.Cormen，机械工业出版社
+[1] [《算法导论》，第三版，Thomas H.Cormen，机械工业出版社](https://99baiduyun.com/baidu/算法导论)
 
-[2] 《算法设计与分析》，王晓东，清华大学出版社
+[2] [《算法设计与分析》，王晓东，清华大学出版社](https://99baiduyun.com/baidu/算法设计与分析)
 
 [3] [《数据结构与算法》，张铭，赵海燕，王腾蛟 ，中国大学 MOOC，清华大学](https://www.icourse163.org/course/PKU-1002534001)
 
