归并排序和快速排序

--- a/docs/数据结构与算法/数据结构/延伸/布隆过滤器.md
+++ b/docs/数据结构与算法/数据结构/延伸/布隆过滤器.md
@@ -103,7 +103,7 @@ $$
 
 Counting Bloom Filter 是将标准的 Bloom Filter 位数组的每一位扩展为一个小的计数器（Counter），在插入元素时给对应的 k（k 为哈希函数个数）个 Counter 值分别加1，删除元素时对应的 k 个 Counter 的值分别减1。Counting Bloom Filter 通过多占用几倍的内存空间的代价，给 Bloom Filter 增加了删除操作。
 
-![CoutingBloomFilter原理图](C:\Users\yue_zhou\Desktop\笔记图片\CoutingBloomFilter原理图.png)
+![CoutingBloomFilter原理图](https://gitee.com/struggle3014/picBed/raw/master/CoutingBloomFilter原理图.png)
 
 <div align="center"><font size="2">Counting Bloom Filter 原理图</font></div>
 
