--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -103,11 +103,12 @@
 * [选择排序](./算法/排序算法/01_选择排序.md)
 * [冒泡排序](./算法/排序算法/02_冒泡排序.md)
 * [插入排序](./算法/排序算法/03_插入排序.md)
-* 希尔排序
-* 归并排序
-* 快速排序
+* [归并排序](./算法/排序算法/04_归并排序.md)
+* [快速排序](./算法/排序算法/05_快速排序.md)
 * 计数排序
 * 基数排序
+* 希尔排序
+* 排序总结
 
 ### 2.3 检索
 
