--- a/docs/数据结构与算法/算法/排序算法/03_插入排序.md
+++ b/docs/数据结构与算法/算法/排序算法/03_插入排序.md
@@ -54,9 +54,9 @@
 
 ## 3 算法分析
 
-| 中文名称 | 英文名称    | 平均时间复杂度 | 最坏时间复杂度 | 最好时间复杂度 | 空间复杂度 | 稳定性 |
-| -------- | ----------- | -------------- | -------------- | -------------- | ---------- | ------ |
-| 插入排序 | Bubble Sort |                | N^2            | N              | 1          | 不稳定 |
+| 中文名称 | 英文名称    | 最坏时间复杂度 | 最好时间复杂度 | 空间复杂度 | 稳定性 |
+| -------- | ----------- | -------------- | -------------- | ---------- | ------ |
+| 插入排序 | Bubble Sort | N^2            | N              | 1          | 不稳定 |
 
 ### 3.1 时间复杂度分析
 
