比较器与堆

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -58,7 +58,6 @@
 ### 1.4 树
 
 * 树
-
 * 二叉树
   * 完全二叉树
   * 满二叉树
@@ -70,7 +69,7 @@
     * B+ 树
     * B* 树
     * LSM 树
-
+* [堆](./数据结构/树/堆.md)
 * 二叉查找树（BST）
 
 ### 1.5 图
@@ -78,6 +77,8 @@
 
 
 ### 1.6 延伸
+
+* 前缀树
 
 * [布隆过滤器（BloomFilter）](./数据结构/延伸/布隆过滤器.md)
 * [跳跃表（SkipList）](./数据结构/延伸/跳表（SkipList）.md)
@@ -105,8 +106,9 @@
 * [插入排序](./算法/排序算法/03_插入排序.md)
 * [归并排序](./算法/排序算法/04_归并排序.md)
 * [快速排序](./算法/排序算法/05_快速排序.md)
-* 计数排序
-* 基数排序
+* [堆排序](./算法/排序算法/06_堆排序.md)
+* 计数排序（桶排序）
+* 基数排序（桶排序）
 * 希尔排序
 * 排序总结
 
