堆排序笔记图片勘误

--- a/docs/数据结构与算法/算法/排序算法/06_堆排序.md
+++ b/docs/数据结构与算法/算法/排序算法/06_堆排序.md
@@ -48,7 +48,7 @@
 
 3）重复步骤2），直到 i 来到 0 位置，结束。
 
-![HEAPSORT](https://gitee.com/struggle3014/picBed/raw/master/HEAPSORT.png)
+![HEAPSORT](https://gitee.com/struggle3014/picBed/raw/master/HEAPSORT[FIXED].png)
 
 <div align="center"><font size="2">HEAPSORT</font></div>
 
