字典树、桶排序、排序总结

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -78,7 +78,7 @@
 
 ### 1.6 延伸
 
-* 前缀树
+* [前缀树](./数据结构/延伸/前缀树.md)
 
 * [布隆过滤器（BloomFilter）](./数据结构/延伸/布隆过滤器.md)
 * [跳跃表（SkipList）](./数据结构/延伸/跳表（SkipList）.md)
@@ -107,10 +107,9 @@
 * [归并排序](./算法/排序算法/04_归并排序.md)
 * [快速排序](./算法/排序算法/05_快速排序.md)
 * [堆排序](./算法/排序算法/06_堆排序.md)
-* 计数排序（桶排序）
-* 基数排序（桶排序）
-* 希尔排序
-* 排序总结
+* [计数排序（桶排序）](./算法/排序算法/07_计数排序.md)
+* [基数排序（桶排序）](./算法/排序算法/08_基数排序.md)
+* [排序总结](./算法/排序算法/排序总结.md)
 
 ### 2.3 检索
 
