--- a/docs/数据结构与算法/算法/搜索算法/二分法.md
+++ b/docs/数据结构与算法/算法/搜索算法/二分法.md
@@ -2,7 +2,7 @@
 
 # 导读
 
-本文介绍二分搜索算法。
+本文介绍二分搜索（Binary Search）算法。
 
 ***持续更新中~***
 
@@ -33,9 +33,9 @@
 
 ### 1 在一个有序数组中，找到某个数是否存在
 
-#### 实现
-
 [BinarySearchExist](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/alogrithm/search/Code01_BSExist.java)
+
+
 
 ### 2 在一个有序数组中，找到 >= 某个数最左侧的位置
 
@@ -44,8 +44,6 @@
 [0, 1, 1, 2, 2, 2, 3, 3, 5, 7, 9, 11]
 
 ​     ↑
-
-#### 实现
 
 [BinarySearchNearLeft](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/alogrithm/search/Code02_BSNearLeft.java)
 
@@ -59,9 +57,9 @@
 
 ​         ↑
 
-#### 实现
-
 [BinarySearchNearRight](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/alogrithm/search/Code03_BSNearRight.java)
+
+
 
 ### 4 局部最小值问题
 
@@ -79,8 +77,6 @@
 假设中间索引值为 M，又任意相邻的数不相等，若 M 位置的值 为 M-1 位置的值和 M+1 位置的值的最小值，则返回 M 位置的值即可；
 否则，M-1 位置的值，M 位置的值和 M+1 位置的值必然是单调的，又最左侧是下降趋势，最右侧是上升趋势，
 则必然存在 M 某一侧值存在先下降后上升的形态，则可以重复上述过程，直至找到局部最小值。
-
-#### 实现
 
 [BinarySearchAwesome](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/alogrithm/search/Code04_BSAwesome.java)
 
