排序总结笔记勘误

--- a/docs/数据结构与算法/算法/排序算法/排序总结.md
+++ b/docs/数据结构与算法/算法/排序算法/排序总结.md
@@ -52,7 +52,7 @@
 | 随机快排 | O(N*logN)  | O(logN)        | 无     |
 | 堆排序   | O(N*logN)  | O(1)           | 无     |
 | 计数排序 | O(N)       | O(M)           | 有     |
-|          | O(N)       | O(M)           | 有     |
+| 基数排序 | O(N)       | O(M)           | 有     |
 
 
 
