链表面试题整理

--- a/docs/数据结构与算法/数据结构/线性结构/链表.md
+++ b/docs/数据结构与算法/数据结构/线性结构/链表.md
@@ -15,9 +15,10 @@
 <a href='#目录' style='text-decoration:none;font-weight:bolder'>目录</a><br/>
 <a href='#正文' style='text-decoration:none;font-weight:bolder'>正文</a><br/>
 &nbsp;&nbsp;&nbsp;&nbsp;<a href='#定义' style='text-decoration:none;${border-style}'>定义</a><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;<a href='#面试题' style='text-decoration:none;${border-style}'>面试题</a><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='#1 单链表和双链表如何反转' style='text-decoration:none;${border-style}'>1 单链表和双链表如何反转</a><br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='#2 把链表中给定值删除' style='text-decoration:none;${border-style}'>2 把链表中给定值删除</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#链表面试指南' style='text-decoration:none;${border-style}'>链表面试指南</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='#方法论' style='text-decoration:none;${border-style}'>方法论</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='#常用数据结构与技巧' style='text-decoration:none;${border-style}'>常用数据结构与技巧</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='#面试题' style='text-decoration:none;${border-style}'>面试题</a><br/>
 <a href='#总结' style='text-decoration:none;font-weight:bolder'>总结</a><br/>
 <a href='#参考文献' style='text-decoration:none;font-weight:bolder'>参考文献</a><br/>
 </nav>
@@ -32,15 +33,202 @@
 
 
 
-## 面试题
+## 链表面试指南
 
-### 1 单链表和双链表如何反转
+### 方法论
+
+* **笔试**时，不用太在乎空间复杂度，一切为了时间复杂度。
+* **面试**时，时间复杂度依然放在第一位，但是一定要找到空间最省的方法。
+
+
+
+### 常用数据结构与技巧
+
+* 使用容器（哈希表，数组等）
+* 快慢指针
+
+
+
+### 面试题
+
+#### 1 单链表和双链表如何反转
 
 [ReverseList](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code01_ReverseList.java)
 
-### 2 把链表中给定值删除
+
+
+#### 2 把链表中给定值删除
 
 [DeleteGivenValue](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code02_DeleteGivenValue.java)
+
+
+
+#### 3 快慢指针
+
+![快慢指针查找链表近似中点](https://gitee.com/struggle3014/picBed/raw/master/快慢指针查找链表近似中点.png)
+
+<div align="center"><font size="2">快慢指针查询链表近似中点</font></div>
+
+1）输入链表头节点，奇数长度返回中点，偶数长度返回上中点。
+
+2）输入链表头节点，奇数长度返回中点，偶数长度返回下中点。
+
+3）输入链表头节点，奇数长度返回中点前一个，偶数返回上中点前一个。
+
+4）输入链表头节点，奇数长度返回中点前一个，偶数返回下中点前一个。
+
+[LinkedListAlmostMid](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code10_LinkedListMid.java)
+
+
+
+#### 4 回文结构判断
+
+给定一个单链表的头节点 head，判断该链表是否为回文结构
+
+##### 1）使用额外栈结构（笔试使用）
+
+![使用额外空间（栈）判断回文结构](https://gitee.com/struggle3014/picBed/raw/master/使用额外空间（栈）判断回文结构.png)
+
+<div align="center"><font size="2">使用额外栈结构进行回文判断</font></div>
+
+1. 链表中的元素依次压入栈中
+2. 链表从 head 开始，栈顶部 pop 节点，判断对应的节点值是否一致。若不一致就跳出该步骤并返回 false，若一致就继续该步骤，直到链表全部遍历完成，返回 true。
+
+[IsPalindromeList#isPalindromeUsingStack](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code11_IsPalindromeList.java)
+
+##### 2）改原链表方法，注意边界（面试使用）
+
+![回文结构判断](https://gitee.com/struggle3014/picBed/raw/master/回文结构判断.png)
+
+<div align="center"><font size="2">回文结构判断</font></div>
+
+1. 通过快慢指针找出近似中点的位置（偶数时，上中点；奇数时，中点）。
+2. 右半部分链表反转，且近似中间节点 S 的 next 置空。
+3. L 为链表头节点，R 为链表尾节点。L 和 R 分别从两端出发，判别对应的节点值是否相等。
+4. 右半部分链表反转恢复。
+
+[IsPalindromeList#isPalindrome](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code11_IsPalindromeList.java)
+
+
+
+#### 5 将单向链表按某值划分成左边小，中间相等，右边大的形式
+
+1）将链表中的元素放入数组，在数组上做 partition（笔试用）
+
+[ListPartition#listPartition1](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code12_ListPartition.java)
+
+2）分为小，中，大三部分，再把各部分串起来（面试用）
+
+[ListPartition#listPartition2](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code12_ListPartition.java)
+
+
+
+#### 6 完成带有 rand 指针的链表复制
+
+题：一种特殊的单链表节点类描述如下：
+
+```java
+class Node {
+    int value;
+    Node next;
+    Node rand;
+    Node(int val) {
+        value = val;
+    }
+}
+```
+
+rand 指针是单链表节点结构中新增的指针，rand 可能指向链表中的任意节点，也可能指向 null。
+
+给定一个由 Node 节点类型组成的无环单链表的头节点 head，请实现一个函数完成链表的复制，并返回复制的新链表的头节点。
+
+【要求】时间复杂度 O(N)，额外空间复杂度 O(1)
+
+[CopyListWithRand#copyListWithRandUsingHashTable](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code13_CopyListWithRand.java)
+
+![带rand指针的数据拷贝（使用哈希表）](https://gitee.com/struggle3014/picBed/raw/master/带rand指针的数据拷贝（使用哈希表）.png)
+
+<div align="center"><font size="2">使用哈希表进行rand指针的链表拷贝</font></div>
+
+[CopyListWithRand#copyListWithRand](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code13_CopyListWithRand.java)
+
+![带rand指针的数据拷贝](https://gitee.com/struggle3014/picBed/raw/master/带rand指针的数据拷贝.png)
+
+<div align="center"><font size="2">带rand指针的链表拷贝</font></div>
+
+
+
+#### 7 使用快慢指针判断链表是否有环
+
+1）快慢指针从头节点 Head 出发。
+
+![链表入环节点判别（一）](https://gitee.com/struggle3014/picBed/raw/master/链表入环节点判别（一）.png)
+
+<div align="center"><font size="2">链表入环节点判别（一）</font></div>
+
+2）慢指针 S 走到环入口，共走了 k 步。此时快指针 S 越过环口的步数为 delta。因为快指针可能绕着环走了很多圈，因此 **k = delta + n*R**，其中 R 为环的大小，n 为快指针 S 绕环走的圈数。
+
+![链表入环节点判别（二）](https://gitee.com/struggle3014/picBed/raw/master/链表入环节点判别（二）.png)
+
+<div align="center"><font size="2">链表入环节点判别（二）</font></div>
+
+3）慢指针进入环中。因为快指针每次都比慢指针快一步，所以，快慢指针最后一定会相遇。**【快慢指针必然相遇】**
+
+4）计算快慢指针相遇位置。因为慢指针 S 在刚进入环时距离快指针 delta 步，所以快指针 F 还需要比慢指针 S 多走 R - delta 步才能与慢指针 S 相遇。又快指针每次走两步，所以快指针还需走 2(R - delta) 步。那么，相遇位置为 2(R- delta) + delta ，化简得 2R -delta，即距离环入口 delta 处，与慢指针 S 进入环时快指针 F 所在位置对称。**【找到环入口】**
+
+![链表入环节点判别（三）](https://gitee.com/struggle3014/picBed/raw/master/链表入环节点判别（三）.png)
+
+<div align="center"><font size="2">链表入环节点判别（三）</font></div>
+
+5）快指针 F 重新从头节点开始走，速度为一次一步，与慢指针 S 相同。可知，快指针走到环入口时，所需 k 步。由步骤2）知 k = delta + n*R，这也是慢指针 S 在环中所走的距离。由快慢指针在环中相遇位置可知，慢指针刚好走到环入口，并与快指针相遇，此时，找到环入口。
+
+![链表入环节点判别（四）](https://gitee.com/struggle3014/picBed/raw/master/链表入环节点判别（四）.png)
+
+<div align="center"><font size="2">链表入环节点判别（四）</font></div>
+
+6）如何求环大小。在证明链表是否有环的过程中，快慢指针第一次相遇。设定一个计数器 count，初始值为 0。慢指针 S 每走一步，count++，当快慢指针再次相遇时，快指针刚好比慢指针多走 R 步，计数器 count = R。**【计算环大小】**
+
+[FindFirstIntersectNode#getLoopNode](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code14_FindFirstIntersectNode.java)
+
+
+
+#### 8 返回两个单链表（链表可能有环，可能无环）相交节点
+
+给定两个可能有环也可能无环的单链表，头节点 head1 和 head2。请实现一个函数，如果两个链表相交，请返回相交的第一个节点。如果不想交，返回 null。
+
+【要求】如果两个链表长度之和为 N，时间复杂度达到 O(N)，额外空间复杂度请达到 O(1)。
+
+【分析】在分析上述问题前，我们需要弄清楚如何找到有环单链表的第一个入环节点。
+
+* 使用 Set 集合判别
+
+  在遍历链表的过程中，依次判断节点是否位于 Set 中，若不存在，则将节点加入 Set，若存在，则该节点是有环链表第一个入环节点。
+
+* 使用快慢指针判断链表是否有环（见上方证明）
+
+上述问题可以分解为以下几个子问题：
+
+* **两个无环链表相交**
+
+  若两个无环链表相交，则必用最后的公共部分。
+
+  ![两无环链表相交的可能性](https://gitee.com/struggle3014/picBed/raw/master/两无环链表相交的可能性.png)
+
+* **一个有环，另一个无环**
+
+  若一个有环，另一个无环，则两者必不相交。
+
+* **两个都有环**
+
+  ![两有环链表相交的可能性](https://gitee.com/struggle3014/picBed/raw/master/两有环链表相交的可能性.png)
+
+[FindFirstIntersectNode#getIntersectNode](../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/linearstructure/Code14_FindFirstIntersectNode.java)
+
+
+
+#### 9 给出单链表要删除节点情况下，在链表上删除该节点
+
+将待删除节点的下一个节点内容考别到删除节点，并将待删除节点指向下下个节点。
 
 
 
@@ -54,3 +242,4 @@
 
 [1] [《算法导论》，第三版，Thomas H.Cormen，机械工业出版社](https://99baiduyun.com/baidu/算法导论)
 
+[2] [快慢指针判断链表是否有环，环入口，环大小,CSDN，YoungSimpleNaive](https://blog.csdn.net/donghuaan/article/details/78988987)
