二叉树的基本算法

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -4,6 +4,8 @@
 
 数据结构与算法是计算机从业人员的内力，只有掌握牢固这部分内容，才能使用合适的数据结构与算法来设计出性能高效的程序。
 
+***持续更新中~***
+
 
 
 # 目录
@@ -58,7 +60,7 @@
 ### 1.4 树
 
 * 树
-* 二叉树
+* [二叉树](./数据结构/树/二叉树)
   * 完全二叉树
   * 满二叉树
   * 平衡二叉树
