二叉树文档勘误

--- a/docs/数据结构与算法/数据结构/树/二叉树/二叉树.md
+++ b/docs/数据结构与算法/数据结构/树/二叉树/二叉树.md
@@ -298,6 +298,8 @@
 
 5. 递归函数都返回 S，每棵子树都这么要求。
 
+[MaxSubBSTHead#maxSubBSTHeadUsingRecursionRoutine](../../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/tree/Code11_MaxSubBSTHead.java)
+
 
 
 #### 派对最大快乐值问题
