二叉树递归套路笔记补充

--- a/docs/数据结构与算法/数据结构/树/二叉树/二叉树.md
+++ b/docs/数据结构与算法/数据结构/树/二叉树/二叉树.md
@@ -349,6 +349,90 @@
 
 
 
+#### 是否是完全二叉树
+
+按二叉树递归套路步骤出发：
+
+1. 以 X 节点为头节点，假设可以向 X 左子树和 X 右子树要任何信息。
+
+2. 在1）的假设下，讨论以 X 为头节点的树，得到答案的可能性。**（最重要）**
+
+   * 从左往右依次生长，没长过左树。
+
+     * 左子树为完全二叉树
+     * 右子树为满二叉树
+     * 左子树高度比右子树高度大1
+
+     左子树是完全二叉树，右子树满二叉树，且左子树高度比右子树高度大1。
+
+   * 从左往右依次生成，左树长满，但未过右树。
+
+     * 左子树为满二叉树
+     * 右子树为满二叉树
+     * 左子树高度比右子树高度大1
+
+   * 从左往右依次生成，左树长满，但右树未满。
+
+     * 左子树为满二叉树
+     * 右子树为完全二叉树
+     * 左子树高度与右子树高度相同
+
+   * 从左往右依次生成，左树长满，右树长满。（**满二叉树**）
+
+     * 左树为满二叉树
+     * 右树为满二叉树
+     * 左子树高度与右子树高度相同
+
+3. 列出所有可能性后，确定需要向左子树和右子树要什么样的信息。
+
+   左子树：左子树是否是完全二叉树，左子树是否是满二叉树，左子树高度
+
+   右子树：右子树是否是完全二叉树，右子树是否是满二叉树，右子树高度
+
+4. 把左树信息和右树信息求全集 S，就是任何一棵树都需要返回的信息 S。
+
+   全集 S 为：子树是否是完全二叉树，是否是满二叉树，及其高度
+
+5. 递归函数都返回 S，每棵子树都这么要求。
+
+[IsCompleteBinaryTree#isCBTUsingRecursionRoutine](../../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/tree/Code13_IsCompleteBinaryTree.java)
+
+
+
+#### 二叉树任意两节点最低公共祖先查找
+
+给定一棵二叉树的头节点 head，和两个节点 n1, n2，返回 n1, n2 的最低公共祖先。
+
+按二叉树递归套路步骤出发：
+
+1. 以 X 节点为头节点，假设可以向 X 左子树和 X 右子树要任何信息。
+
+2. 在1）的假设下，讨论以 X 为头节点的树，得到答案的可能性。**（最重要）**
+
+   * n1, n2 都不在以 X 为头节点的子树上。（不可能形成交汇点）
+   * n1, n2 只有一个在 X 为头节点的子树上。（不可能形成交汇点）
+   * n1, n2 都在以 X 为头节点的子树上。（可能形成交汇点）
+     * 左右子树各一个
+     * n1, n2 位于左子树
+     * n1, n2 位于右子树
+     * X 本身是 n1（n2），n2（n1）位于左子树或右子树
+
+3. 列出所有可能性后，确定需要向左子树和右子树要什么样的信息。
+
+   左子树：n1, n2 最初交汇点是谁；是否发现 n1；是否发现 n2
+
+   右子树：n1, n2 最初交汇点是谁；是否发现 n1；是否发现 n2
+
+4. 把左树信息和右树信息求全集 S，就是任何一棵树都需要返回的信息 S。
+
+   全集 S 为：n1, n2 最初交汇点是谁；是否发现 n1；是否发现 n2
+
+5. 递归函数都返回 S，每棵子树都这么要求。
+
+[LowestAncestor#lowestAncestorUsingRecursionRoutine](../../../../../projects/alogorithm-basic/src/main/java/com/xiumei/datastructure/tree/Code14_LowestAncestor.java)
+
+
+
 # 总结
 
 
