--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -2,7 +2,7 @@
 
 # 导读
 
-数据结构与算法是计算机从业人员的内力，只有掌握牢固这部分内容，才能使用合适的数据结构与算法来设计出性能高效的程序。
+本文起，开始系统整理数据结构与算法相关内容。
 
 ***持续更新中~***
 
@@ -63,6 +63,7 @@
 * [二叉树](./数据结构/树/二叉树/二叉树.md)
   * 完全二叉树
   * 满二叉树
+  * 二叉查找树（BST）
   * 平衡二叉树
     * 红黑树
     * AVL
@@ -72,18 +73,25 @@
     * B* 树
     * LSM 树
 * [堆](./数据结构/树/堆.md)
-* 二叉查找树（BST）
 
 ### 1.5 图
 
+* [图的基本算法](./数据结构/图/图的基本算法.md)
+  * 图的表示
+  * 广度优先遍历
+  * 深度优先遍历
+  * 拓扑排序
 
+* [最小生成树](./数据结构/图/最小生成树.md)
+  * 最小生成树的形成
+  * Kruskal 算法和 Prim 算法
 
 ### 1.6 延伸
 
 * [前缀树](./数据结构/延伸/前缀树.md)
-
 * [布隆过滤器（BloomFilter）](./数据结构/延伸/布隆过滤器.md)
 * [跳跃表（SkipList）](./数据结构/延伸/跳表（SkipList）.md)
+* [并查集](./数据结构/延伸/并查集.md)
 * [数据结构的思考](./数据结构/延伸/数据结构的思考.md)
 
 
