--- a/docs/数据结构与算法/数据结构/延伸/并查集.md
+++ b/docs/数据结构与算法/数据结构/延伸/并查集.md
@@ -14,7 +14,17 @@
 
 # 目录
 
-
+<nav>
+<a href='#导读' style='text-decoration:none;font-weight:bolder'>导读</a><br/>
+<a href='#目录' style='text-decoration:none;font-weight:bolder'>目录</a><br/>
+<a href='#正文' style='text-decoration:none;font-weight:bolder'>正文</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#定义' style='text-decoration:none;${border-style}'>定义</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#基本操作' style='text-decoration:none;${border-style}'>基本操作</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#优化' style='text-decoration:none;${border-style}'>优化</a><br/>
+&nbsp;&nbsp;&nbsp;&nbsp;<a href='#应用' style='text-decoration:none;${border-style}'>应用</a><br/>
+<a href='#总结' style='text-decoration:none;font-weight:bolder'>总结</a><br/>
+<a href='#参考文献' style='text-decoration:none;font-weight:bolder'>参考文献</a><br/>
+</nav>
 
 # 正文
 
