最小生成树

--- a/docs/数据结构与算法/数据结构/图/图的基本算法.md
+++ b/docs/数据结构与算法/数据结构/图/图的基本算法.md
@@ -126,12 +126,10 @@
 #### 邻接矩阵法
 
 对于图 G = (V, E) 来说，其**邻接矩阵表示**，通常将图 G 中的节点编为 1, 2, ..., |V|，这种编号可以是任意的。在进行次编号后，图 G 的邻接矩阵表示由一个 |V| * |V| 的矩阵 A = （ai,j）予以表示，该矩阵满足下述条件：
-$$
-a_{ij} = \begin{cases} 1，若(i, j) ∈ E \\ 0，其他\end{cases}
-$$
-不管图有多少条边，邻接矩阵的空间都是 Θ(V^2)。无向图的邻接矩阵是一个对称矩阵。由于在无向图中，边 (u, v) 和边 (v, u) 是同一条边，无向图的邻接矩阵 A 就是自己的转置。在某些应用中，可能只需要存放对角线及其以上部分邻接矩阵（半个矩阵），从而图存储空间需求减少几乎一半。
 
-邻接矩阵可用来表示**权重图**。例如，如果 G = (V, E) 为一个权重图，其权重函数为 w，则我们直接将边 (u, v) ∈ E 的权重 w(u, v) 存放在邻接矩阵中的第 u 行第 v 列记录是哪个。对于不存在的边，则在相应的行记录上存放 NIL，不过对于很多问题来说，使用 0 或者 ∞ 来标识一条不存在的边更为便捷。
+![1](http://latex.codecogs.com/svg.latex?a_{ij} = \begin{cases}1,if(i, j)\in E\\\\0, others\end{cases})
+
+不管图有多少条边，邻接矩阵的空间都是 Θ(V^2)。无向图的邻接矩阵是一个对称矩阵。由于在无向图中，边 (u, v) 和边 (v, u) 是同一条边，无向图的邻接矩阵 A 就是自己的转置。在某些应用中，可能只需要存放对角线及其以上部分邻接矩阵（半个矩阵），从而图存储空间需求减少几乎一半。邻接矩阵可用来表示**权重图**。例如，如果 G = (V, E) 为一个权重图，其权重函数为 w，则我们直接将边 (u, v) ∈ E 的权重 w(u, v) 存放在邻接矩阵中的第 u 行第 v 列记录是哪个。对于不存在的边，则在相应的行记录上存放 NIL，不过对于很多问题来说，使用 0 或者 ∞ 来标识一条不存在的边更为便捷。
 
 虽然邻接链表标识法和邻接矩阵表示法在渐进意义上至少是一样空间有效，但邻接矩阵表示法更简单，因此在图规模较小时，更倾向于使用邻接矩阵表示法。且，对于无向图来说，邻接矩阵还有一个优势：每个记录项只需要1位的空间。
 
