--- a/docs/数据结构与算法/数据结构/延伸/布隆过滤器.md
+++ b/docs/数据结构与算法/数据结构/延伸/布隆过滤器.md
@@ -148,3 +148,8 @@ CBF 和 BF 的一个主要不同是 CBF 用一个 Counter 取代了 BF 中的一
 
 [6] [LaTex 各种命令及符号，CSDN，暗-小汐](https://www.cnblogs.com/hznumqf/p/13534529.html)
 
+[7] [Markdown 最全数学公式速查](https://blog.csdn.net/jyfu2_12/article/details/79207643)
+
+[8] [latex 集合相关的符号](https://blog.csdn.net/robert_chen1988/article/details/76209634)
+
+[8] [Github Markdown 公式显示](https://zhuanlan.zhihu.com/p/149281857)
