单源最短路径和Dijkstra算法

--- a/docs/数据结构与算法/数据结构/图/最小生成树.md
+++ b/docs/数据结构与算法/数据结构/图/最小生成树.md
@@ -8,7 +8,7 @@
 
 我们可以将上述的布线问题用一个连通无向图 G = (V, E) 来表示，这里的 V 是针脚的集合，E 是针脚之间可能连接，并且对于每条边 (u, v) ∈ E，我们为其赋予权重 w(u, v) 作为连接针脚 u 和针脚 v 的代价（也就是连线的长度）。我们希望找到一个无环子集 T ⊆ E，既能够将所有的节点（针脚）连接起来，又具有最小的权重，即 
 
-![1](http://latex.codecogs.com/svg.latex?w(T)=\sum_{(u, v)\in{T}}w(u, v))
+<img src="http://latex.codecogs.com/svg.latex?w(T)=\sum_{(u, v)\in{T}}w(u, v)">
 
 由于 T 是无环的，并且能连通所有节点，因此，T 必然是一棵树。我们称这样的树为（图 G 的）生成树。因为它是由图 G 所生成的。我们称求取该生成树的问题为**最小生成树问题**。
 
