--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -81,10 +81,16 @@
   * 广度优先遍历
   * 深度优先遍历
   * 拓扑排序
-
 * [最小生成树](./数据结构/图/最小生成树.md)
   * 最小生成树的形成
   * Kruskal 算法和 Prim 算法
+* [单源最短路径](./数据结构/图/单源最短路径/单源最短路径.md)
+  * Bellman-Ford 算法
+  * 有向无环图中的单源最短路径问题
+  * [Dijkstra 算法](./数据结构/图/单源最短路径/Dijkstra算法.md)
+  * 差分约束和最短路径
+* 所有节点对的最短路径问题
+* 最大流
 
 ### 1.6 延伸
 
