添加数据与算法可视化网站链接

--- a/docs/数据结构与算法/数据结构与算法.md
+++ b/docs/数据结构与算法/数据结构与算法.md
@@ -180,3 +180,9 @@
 [3] [《数据结构与算法》，张铭，赵海燕，王腾蛟 ，中国大学 MOOC，清华大学](https://www.icourse163.org/course/PKU-1002534001)
 
 [4] [《数据结构》，陈越，何钦铭，中国大学 MOOC，浙江大学](https://www.icourse163.org/course/ZJU-93001)
+
+[5] [旧金山大学，数据结构与算法可视化](https://www.cs.usfca.edu/~galles/visualization/Algorithms.html)
+
+[6] [visualgo，数据结构与算法可视化](https://www.visualgo.net/zh)
+
+[7] [极客计算机科学门户，数据结构与算法可视化](https://geeksforgeeks.org)
